--- a/source/assets/css/style.css
+++ b/source/assets/css/style.css
@@ -162,12 +162,9 @@ h1 {
     border-bottom:3px solid #b5152b;
 }
 
-#custom_carousel .controls a small {
+#custom_carousel .controls a {
     overflow:hidden;
-
-    font-size:10px;
-    margin-top:5px;
-    font-weight:bold;
+	color: #363636;
 }
 
 
@@ -259,7 +256,6 @@ i.wetter {
   font-size: 100px;
   font-weight: 300;
   text-align: center;
-  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.15);
 }
 
 #weather ul {
