--- a/source/assets/css/style.css
+++ b/source/assets/css/style.css
@@ -284,6 +284,25 @@ i.wetter {
 
 \* --------------------------------- */
 
+#map .container-fluid {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+#map .container-fluid .row {
+	margin-left: 0;
+	margin-right: 0;
+}
+#map .container-fluid .row .col-xs-12 {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+#tripmap {
+	width: 100%;
+	height: 500px;
+}
+
 .markerlabel {
 	color: #C0392B;
 	background-color: white;
