--- a/source/assets/css/style.css
+++ b/source/assets/css/style.css
@@ -59,9 +59,13 @@ a:focus {
     outline-offset: -2px;
 }
 
-h1 {
+h1, h2, h3 {
 	font-weight: 300;
 	margin-top: 0;
+}
+
+.section-header {
+	border-bottom: 1px solid #363636;
 }
 
 .subhead {
