--- a/source/assets/css/strandhotel.css
+++ b/source/assets/css/strandhotel.css
@@ -14,13 +14,21 @@
 /* typo
 ------- */
 
-.grid-item h2 {
+#panorama-etage h2 {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 700;
 	letter-spacing:.15em;
-	color: #e74c3c;
+	color: #CCA55F;
 	text-transform: uppercase;
 	margin-top: 20px;
+}
+
+#panorama-etage p {
+	line-height: 2em;
+}
+
+#panorama-etage .row {
+	margin-bottom: 30px;
 }
 
 /* sand button
